--- a/index.html
+++ b/index.html
@@ -1,111 +1,142 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gogula Anji Medical Order</title>
+  <title>Gogula Anji Medical & Appointment Form</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f8ff;
+      background-color: #001f3f;
+      color: white;
       padding: 20px;
-    }
-    h1 {
-      text-align: center;
     }
     form {
-      max-width: 600px;
-      margin: auto;
-      background: #fff;
+      background-color: #ffffff10;
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
     }
     label {
       display: block;
-      margin-top: 10px;
+      margin: 10px 0 5px;
     }
     input, select, textarea {
       width: 100%;
       padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      border: none;
     }
     button {
-      margin-top: 20px;
       padding: 10px 20px;
-      background-color: #28a745;
+      background-color: #0074D9;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 5px;
       cursor: pointer;
-    }
-    button:hover {
-      background-color: #218838;
     }
   </style>
 </head>
 <body>
-  <h1>Medical Order Form</h1>
-  <form>
-    <h3>👤 Personal Details</h3>
-    <label for="name">Full Name:</label>
-    <input type="text" id="name" name="name" required /><label for="age">Age:</label>
-<input type="number" id="age" name="age" required />
+  <h1>Gogula Anji Medical Order & Appointment</h1>
+  <form id="orderForm">
+    <h2>Personal Details</h2>
+    <label for="name">Name</label>
+    <input type="text" id="name" required>
 
-<label for="gender">Gender:</label>
-<select id="gender" name="gender">
-  <option value="Male">Male</option>
-  <option value="Female">Female</option>
-  <option value="Other">Other</option>
-</select>
+    <label for="mobile">Mobile Number</label>
+    <input type="tel" id="mobile" required>
 
-<label for="mobile">Mobile Number:</label>
-<input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required />
+    <label for="age">Age</label>
+    <input type="number" id="age" required>
 
-<h3>📦 Delivery Address</h3>
-<label for="state">State:</label>
-<input type="text" id="state" name="state" required />
+    <label for="gender">Gender</label>
+    <select id="gender" required>
+      <option value="">Select Gender</option>
+      <option value="Male">Male</option>
+      <option value="Female">Female</option>
+      <option value="Other">Other</option>
+    </select>
 
-<label for="district">District:</label>
-<input type="text" id="district" name="district" required />
+    <h2>Delivery Address</h2>
+    <label for="state">State</label>
+    <input type="text" id="state" required>
 
-<label for="mandal">Mandal/Sub-district:</label>
-<input type="text" id="mandal" name="mandal" required />
+    <label for="district">District</label>
+    <input type="text" id="district" required>
 
-<label for="pincode">PIN Code:</label>
-<input type="text" id="pincode" name="pincode" pattern="[0-9]{6}" required />
+    <label for="mandal">Mandal / Sub-district</label>
+    <input type="text" id="mandal" required>
 
-<label for="area">Street/Area:</label>
-<input type="text" id="area" name="area" required />
+    <label for="pincode">Pin Code</label>
+    <input type="text" id="pincode" required>
 
-<label for="location">Live Location (Google Maps link):</label>
-<input type="url" id="location" name="location" />
+    <label for="area">Area / Street</label>
+    <input type="text" id="area" required>
 
-<h3>💊 Select Medicines</h3>
-<label for="medicine-type">Category:</label>
-<select id="medicine-type" name="medicine-type">
-  <option value="Cold & Cough">Cold & Cough</option>
-  <option value="Fever">Fever</option>
-  <option value="Pain Relief">Pain Relief</option>
-  <option value="Allergy">Allergy</option>
-  <option value="Children">Children (&lt; 10 yrs)</option>
-  <option value="Adults">Adults</option>
-</select>
+    <label for="location">Live Location (Share URL)</label>
+    <input type="url" id="location">
 
-<label for="medicine">Medicine Names (or symptoms):</label>
-<textarea id="medicine" name="medicine" rows="4" placeholder="e.g. L-Hist Mont, Dolo 650, Paracetamol..."></textarea>
+    <h2>Medicine Order</h2>
+    <label for="agegroup">Select Age Group</label>
+    <select id="agegroup">
+      <option value="Adult">Adult</option>
+      <option value="Child">Child (Age < 10)</option>
+    </select>
 
-<h3>💰 Payment Method</h3>
-<label for="payment">Select Payment Option:</label>
-<select id="payment" name="payment">
-  <option value="UPI">UPI (PhonePe / Google Pay)</option>
-  <option value="Cash">Cash on Delivery</option>
-  <option value="Other">Other Payment App</option>
-</select>
+    <label for="category">Medicine Category</label>
+    <select id="category">
+      <option>Fever</option>
+      <option>Cold & Cough</option>
+      <option>Pain Relief</option>
+      <option>Allergy</option>
+      <option>Children's Tablets</option>
+      <option>Others</option>
+    </select>
 
-<button type="submit">Place Order</button>
+    <label for="medicine">Medicine Name</label>
+    <input type="text" id="medicine">
 
+    <label for="quantity">Quantity</label>
+    <input type="number" id="quantity">
+
+    <h2>Doctor Appointment (Optional)</h2>
+    <label for="needAppt">Do you want a doctor appointment?</label>
+    <select id="needAppt">
+      <option value="No">No</option>
+      <option value="Yes">Yes</option>
+    </select>
+
+    <div id="doctorDetails" style="display: none">
+      <label for="doctor">Select Doctor</label>
+      <select id="doctor">
+        <option value="Dr. Ramesh Babu">Dr. Ramesh Babu – RMB Doctor (9:30 AM – 6:30 PM, Sun Off)</option>
+      </select>
+
+      <label for="apptDate">Appointment Date</label>
+      <input type="date" id="apptDate">
+
+      <label for="symptoms">Symptoms / Reason</label>
+      <textarea id="symptoms" rows="3"></textarea>
+    </div>
+
+    <h2>Payment Method</h2>
+    <label for="payment">Select Payment Method</label>
+    <select id="payment">
+      <option>UPI</option>
+      <option>PhonePe</option>
+      <option>Google Pay</option>
+      <option>Paytm</option>
+      <option>Cash on Delivery</option>
+    </select>
+
+    <button type="submit">Submit</button>
   </form>
+
+  <script>
+    document.getElementById('needAppt').addEventListener('change', function () {
+      document.getElementById('doctorDetails').style.display = this.value === 'Yes' ? 'block' : 'none';
+    });
+  </script>
 </body>
 </html>
