--- a/index.html
+++ b/index.html
@@ -1,142 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gogula Anji Medical & Appointment Form</title>
+  <title>Gogula Anji Medical & Doctor Appointment</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       background-color: #001f3f;
       color: white;
+      font-family: Arial, sans-serif;
       padding: 20px;
     }
     form {
       background-color: #ffffff10;
       padding: 20px;
       border-radius: 10px;
+      max-width: 600px;
+      margin: auto;
     }
     label {
       display: block;
-      margin: 10px 0 5px;
+      margin-top: 10px;
     }
     input, select, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 8px;
+      margin-top: 5px;
       margin-bottom: 15px;
-      border-radius: 5px;
       border: none;
+      border-radius: 5px;
     }
     button {
-      padding: 10px 20px;
       background-color: #0074D9;
       color: white;
       border: none;
+      padding: 10px 20px;
       border-radius: 5px;
       cursor: pointer;
+    }
+    #medicalForm, #appointmentForm {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <h1>Gogula Anji Medical Order & Appointment</h1>
-  <form id="orderForm">
-    <h2>Personal Details</h2>
-    <label for="name">Name</label>
-    <input type="text" id="name" required>
-
-    <label for="mobile">Mobile Number</label>
-    <input type="tel" id="mobile" required>
-
-    <label for="age">Age</label>
-    <input type="number" id="age" required>
-
-    <label for="gender">Gender</label>
-    <select id="gender" required>
-      <option value="">Select Gender</option>
-      <option value="Male">Male</option>
-      <option value="Female">Female</option>
-      <option value="Other">Other</option>
+  <h1 style="text-align:center;">Gogula Anji Medical & Appointment Form</h1>  <form>
+    <label>Choose Service:</label>
+    <select id="serviceSelector" onchange="toggleForms()">
+      <option value="none">-- Select --</option>
+      <option value="medical">Medical Order</option>
+      <option value="appointment">Doctor Appointment</option>
     </select>
+  </form>  <!-- Medical Form -->  <form id="medicalForm">
+    <h2>Medical Order</h2>
+    <label>Name:</label><input type="text">
+    <label>Mobile Number:</label><input type="tel">
+    <label>Age:</label><input type="number">
+    <label>Gender:</label>
+    <select><option>Male</option><option>Female</option><option>Other</option></select><label>Address:</label>
+<input type="text" placeholder="State">
+<input type="text" placeholder="District">
+<input type="text" placeholder="Mandal/Sub-district">
+<input type="text" placeholder="Pin Code">
+<input type="text" placeholder="Street / Area">
+<input type="url" placeholder="Live Location URL">
 
-    <h2>Delivery Address</h2>
-    <label for="state">State</label>
-    <input type="text" id="state" required>
+<label>Age Group:</label>
+<select><option>Adult</option><option>Child (<10 years)</option></select>
 
-    <label for="district">District</label>
-    <input type="text" id="district" required>
+<label>Medicine Category:</label>
+<select>
+  <option>Fever</option><option>Cold & Cough</option>
+  <option>Pain Relief</option><option>Allergy</option>
+  <option>Child Medicines</option><option>Others</option>
+</select>
 
-    <label for="mandal">Mandal / Sub-district</label>
-    <input type="text" id="mandal" required>
+<label>Medicine Name:</label><input type="text">
+<label>Quantity:</label><input type="number">
 
-    <label for="pincode">Pin Code</label>
-    <input type="text" id="pincode" required>
+<label>Payment Method:</label>
+<select>
+  <option>Cash on Delivery</option>
+  <option>PhonePe</option>
+  <option>Google Pay</option>
+  <option>Paytm</option>
+</select>
 
-    <label for="area">Area / Street</label>
-    <input type="text" id="area" required>
+<button type="submit">Submit</button>
 
-    <label for="location">Live Location (Share URL)</label>
-    <input type="url" id="location">
+  </form>  <!-- Appointment Form -->  <form id="appointmentForm">
+    <h2>Doctor Appointment</h2>
+    <label>Name:</label><input type="text">
+    <label>Mobile Number:</label><input type="tel">
+    <label>Age:</label><input type="number">
+    <label>Gender:</label>
+    <select><option>Male</option><option>Female</option><option>Other</option></select><label>Select Doctor:</label>
+<select>
+  <option>Dr. Ramesh Babu – RMB Doctor (9:30 AM to 6:30 PM, Sunday Off)</option>
+</select>
 
-    <h2>Medicine Order</h2>
-    <label for="agegroup">Select Age Group</label>
-    <select id="agegroup">
-      <option value="Adult">Adult</option>
-      <option value="Child">Child (Age < 10)</option>
-    </select>
+<label>Appointment Date:</label><input type="date">
+<label>Symptoms:</label><textarea rows="3"></textarea>
 
-    <label for="category">Medicine Category</label>
-    <select id="category">
-      <option>Fever</option>
-      <option>Cold & Cough</option>
-      <option>Pain Relief</option>
-      <option>Allergy</option>
-      <option>Children's Tablets</option>
-      <option>Others</option>
-    </select>
+<button type="submit">Submit</button>
 
-    <label for="medicine">Medicine Name</label>
-    <input type="text" id="medicine">
-
-    <label for="quantity">Quantity</label>
-    <input type="number" id="quantity">
-
-    <h2>Doctor Appointment (Optional)</h2>
-    <label for="needAppt">Do you want a doctor appointment?</label>
-    <select id="needAppt">
-      <option value="No">No</option>
-      <option value="Yes">Yes</option>
-    </select>
-
-    <div id="doctorDetails" style="display: none">
-      <label for="doctor">Select Doctor</label>
-      <select id="doctor">
-        <option value="Dr. Ramesh Babu">Dr. Ramesh Babu – RMB Doctor (9:30 AM – 6:30 PM, Sun Off)</option>
-      </select>
-
-      <label for="apptDate">Appointment Date</label>
-      <input type="date" id="apptDate">
-
-      <label for="symptoms">Symptoms / Reason</label>
-      <textarea id="symptoms" rows="3"></textarea>
-    </div>
-
-    <h2>Payment Method</h2>
-    <label for="payment">Select Payment Method</label>
-    <select id="payment">
-      <option>UPI</option>
-      <option>PhonePe</option>
-      <option>Google Pay</option>
-      <option>Paytm</option>
-      <option>Cash on Delivery</option>
-    </select>
-
-    <button type="submit">Submit</button>
-  </form>
-
-  <script>
-    document.getElementById('needAppt').addEventListener('change', function () {
-      document.getElementById('doctorDetails').style.display = this.value === 'Yes' ? 'block' : 'none';
-    });
-  </script>
-</body>
+  </form>  <script>
+    function toggleForms() {
+      const selection = document.getElementById("serviceSelector").value;
+      document.getElementById("medicalForm").style.display = selection === "medical" ? "block" : "none";
+      document.getElementById("appointmentForm").style.display = selection === "appointment" ? "block" : "none";
+    }
+  </script></body>
 </html>
