--- a/index.html
+++ b/index.html
@@ -73,7 +73,18 @@
   <option>Child Medicines</option><option>Others</option>
 </select>
 
-<label>Medicine Name:</label><input type="text">
+<label>Medicine Name:</label>
+<select>
+  <option>Paracetamol</option>
+  <option>Montelukast</option>
+  <option>Cetirizine</option>
+  <option>Calpol</option>
+  <option>Dolo 650</option>
+  <option>Combiflam</option>
+  <option>Sinarest</option>
+  <option>Others</option>
+</select>
+
 <label>Quantity:</label><input type="number">
 
 <label>Payment Method:</label>
