--- a/index.html
+++ b/index.html
@@ -1,133 +1,149 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Gogula Anji Medical & Doctor Appointment</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gogula Anji Worlds - Medical & Appointments</title>
   <style>
     body {
-      background-color: #001f3f;
-      color: white;
       font-family: Arial, sans-serif;
+      background: #001f3f;
+      color: white;
       padding: 20px;
     }
+    h1 {
+      text-align: center;
+      color: #00d9ff;
+    }
     form {
-      background-color: #ffffff10;
+      background: white;
+      color: black;
       padding: 20px;
       border-radius: 10px;
       max-width: 600px;
       margin: auto;
     }
+    .hidden {
+      display: none;
+    }
     label {
+      font-weight: bold;
       display: block;
-      margin-top: 10px;
+      margin-top: 15px;
     }
     input, select, textarea {
       width: 100%;
-      padding: 8px;
+      padding: 10px;
       margin-top: 5px;
-      margin-bottom: 15px;
-      border: none;
       border-radius: 5px;
+      border: 1px solid #ccc;
     }
     button {
-      background-color: #0074D9;
+      background: #0074cc;
       color: white;
       border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
+      padding: 12px;
+      border-radius: 8px;
+      margin-top: 20px;
       cursor: pointer;
-    }
-    #medicalForm, #appointmentForm {
-      display: none;
-    }
-    #customCategory {
-      display: none;
+      width: 100%;
     }
   </style>
 </head>
 <body>
-  <h1 style="text-align:center;">Gogula Anji Medical & Appointment Form</h1>  <form>
-    <label>Choose Service:</label>
-    <select id="serviceSelector" onchange="toggleForms()">
-      <option value="none">-- Select --</option>
-      <option value="medical">Medical Order</option>
-      <option value="appointment">Doctor Appointment</option>
+  <h1>🩺 Gogula Anji Medical & Doctor Appointment</h1>
+  <form action="https://formsubmit.co/anjigogula27@gmail.com" method="POST">
+    <!-- Hidden for Google Sheet integration -->
+    <input type="hidden" name="_next" value="https://gogulaanji.github.io/gogula-anji-worlds/thank-you.html">
+    <input type="hidden" name="_captcha" value="false">
+
+    <label for="service">Select Service</label>
+    <select id="service" name="Service" required onchange="toggleService(this.value)">
+      <option value="">-- Choose Option --</option>
+      <option value="Medicine">Medicine Order</option>
+      <option value="Doctor">Doctor Appointment</option>
     </select>
-  </form>  <!-- Medical Form -->  <form id="medicalForm">
-    <h2>Medical Order</h2>
-    <label>Name:</label><input type="text">
-    <label>Mobile Number:</label><input type="tel">
-    <label>Age:</label><input type="number">
-    <label>Gender:</label>
-    <select><option>Male</option><option>Female</option><option>Other</option></select><label>Address:</label>
-<input type="text" placeholder="State">
-<input type="text" placeholder="District">
-<input type="text" placeholder="Mandal/Sub-district">
-<input type="text" placeholder="Pin Code">
-<input type="text" placeholder="Street / Area">
-<input type="url" placeholder="Live Location URL">
 
-<label>Age Group:</label>
-<select><option>Adult</option><option>Child (<10 years)</option></select>
+    <!-- Common Fields -->
+    <label for="name">Full Name</label>
+    <input type="text" name="Name" required>
 
-<label>Medicine Category:</label>
-<select id="categorySelector" onchange="toggleCustomCategory()">
-  <option>Fever</option><option>Cold & Cough</option>
-  <option>Pain Relief</option><option>Allergy</option>
-  <option>Child Medicines</option><option value="other">Other</option>
-</select>
-<input type="text" id="customCategory" placeholder="Enter custom category">
+    <label for="mobile">Mobile Number</label>
+    <input type="tel" name="Mobile" pattern="[0-9]{10}" required>
 
-<label>Medicine Name:</label>
-<select>
-  <option>Paracetamol</option>
-  <option>Montelukast</option>
-  <option>Cetirizine</option>
-  <option>Calpol</option>
-  <option>Dolo 650</option>
-  <option>Combiflam</option>
-  <option>Sinarest</option>
-  <option>Others</option>
-</select>
+    <label for="age">Age</label>
+    <input type="number" name="Age" required>
 
-<label>Quantity:</label><input type="number">
+    <label for="gender">Gender</label>
+    <select name="Gender" required>
+      <option value="">Select</option>
+      <option>Male</option>
+      <option>Female</option>
+      <option>Other</option>
+    </select>
 
-<label>Payment Method:</label>
-<select>
-  <option>Cash on Delivery</option>
-  <option>PhonePe</option>
-  <option>Google Pay</option>
-  <option>Paytm</option>
-</select>
+    <!-- Medicine Section -->
+    <div id="medicineFields" class="hidden">
+      <label>Category</label>
+      <select name="Tablet Category">
+        <option>Fever</option>
+        <option>Cold</option>
+        <option>Pain</option>
+        <option>Other</option>
+      </select>
 
-<button type="submit">Submit</button>
+      <label>Tablet Name</label>
+      <select name="Tablet Name" id="tabletDropdown" onchange="showOtherTablet(this)">
+        <option>Paracetamol</option>
+        <option>Histac</option>
+        <option>Montair LC</option>
+        <option>Citrazine</option>
+        <option>Other</option>
+      </select>
+      <input type="text" name="Other Tablet" id="otherTablet" placeholder="Enter tablet name" class="hidden">
 
-  </form>  <!-- Appointment Form -->  <form id="appointmentForm">
-    <h2>Doctor Appointment</h2>
-    <label>Name:</label><input type="text">
-    <label>Mobile Number:</label><input type="tel">
-    <label>Age:</label><input type="number">
-    <label>Gender:</label>
-    <select><option>Male</option><option>Female</option><option>Other</option></select><label>Select Doctor:</label>
-<select>
-  <option>Dr. Ramesh Babu – RMB Doctor (9:30 AM to 6:30 PM, Sunday Off)</option>
-</select>
+      <label>Quantity</label>
+      <input type="number" name="Quantity" min="1">
 
-<label>Appointment Date:</label><input type="date">
-<label>Symptoms:</label><textarea rows="3"></textarea>
+      <label>Delivery Address</label>
+      <textarea name="Delivery Address" required placeholder="State, District, Mandal, PIN, Street, Area, etc."></textarea>
 
-<button type="submit">Submit</button>
+      <label>Payment Mode</label>
+      <select name="Payment Mode">
+        <option>UPI</option>
+        <option>PhonePe</option>
+        <option>GPay</option>
+        <option>Cash on Delivery</option>
+      </select>
+    </div>
 
-  </form>  <script>
-    function toggleForms() {
-      const selection = document.getElementById("serviceSelector").value;
-      document.getElementById("medicalForm").style.display = selection === "medical" ? "block" : "none";
-      document.getElementById("appointmentForm").style.display = selection === "appointment" ? "block" : "none";
+    <!-- Doctor Section -->
+    <div id="doctorFields" class="hidden">
+      <label>Select Doctor</label>
+      <select name="Doctor">
+        <option>Dr. Ramesh Babu (9:30am - 6:30pm, Sun Off)</option>
+      </select>
+
+      <label>Preferred Time</label>
+      <input type="time" name="Preferred Time">
+
+      <label>Symptoms or Notes</label>
+      <textarea name="Symptoms" placeholder="Mention your problem briefly..."></textarea>
+    </div>
+
+    <button type="submit">Submit</button>
+  </form>
+
+  <script>
+    function toggleService(value) {
+      document.getElementById('medicineFields').classList.toggle('hidden', value !== 'Medicine');
+      document.getElementById('doctorFields').classList.toggle('hidden', value !== 'Doctor');
     }
 
-    function toggleCustomCategory() {
-      const category = document.getElementById("categorySelector").value;
-      const customField = document.getElementById("customCategory");
-      customField.style.display = category === "other" ? "block" : "none";
+    function showOtherTablet(select) {
+      const isOther = select.value === 'Other';
+      document.getElementById('otherTablet').classList.toggle('hidden', !isOther);
     }
-  </script></body>
-</html>
+  </script>
+</body>
+</html> 
