--- a/index.html
+++ b/index.html
@@ -3,48 +3,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gogula Anji Worlds - Order Portal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0a0f3d;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #0a0f3d, #1a237e);
       color: #ffffff;
       margin: 0;
       padding: 0;
     }
     .container {
-      max-width: 700px;
-      margin: 40px auto;
+      max-width: 800px;
+      margin: 50px auto;
       background-color: #ffffff;
       color: #000000;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
     }
-    h1, h2 {
+    h1, h2, h3 {
       text-align: center;
       color: #0a0f3d;
     }
     label {
       display: block;
       margin: 12px 0 6px;
-      font-weight: bold;
+      font-weight: 600;
     }
     input, select {
       width: 100%;
-      padding: 10px;
-      border-radius: 6px;
+      padding: 12px;
+      border-radius: 8px;
       border: 1px solid #ccc;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
+      font-size: 15px;
     }
     button {
       background-color: #0a0f3d;
       color: #ffffff;
-      padding: 12px 20px;
+      padding: 14px;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       font-size: 16px;
       width: 100%;
       cursor: pointer;
+      font-weight: bold;
     }
     button:hover {
       background-color: #061035;
@@ -54,19 +57,19 @@
 </head>
 <body>
   <div class="container">
-    <h1>Gogula Anji Worlds</h1>
-    <h2>Medical Order & Doctor Appointment</h2><form action="https://formsubmit.co/anjigogula27@gmail.com" method="POST">
+    <h1>🧾 Gogula Anji Worlds</h1>
+    <h2>🩺 Medical Order & Doctor Appointment</h2><form action="https://formsubmit.co/anjigogula27@gmail.com" method="POST">
   <h3>👤 Personal Details</h3>
-  <label for="name">Full Name:</label>
+  <label>Full Name:</label>
   <input type="text" name="name" required />
 
-  <label for="mobile">Mobile Number:</label>
+  <label>Mobile Number:</label>
   <input type="tel" name="mobile" required />
 
-  <label for="age">Age:</label>
+  <label>Age:</label>
   <input type="number" name="age" required />
 
-  <label for="gender">Gender:</label>
+  <label>Gender:</label>
   <select name="gender" required>
     <option value="">-- Select Gender --</option>
     <option>Male</option>
@@ -74,7 +77,7 @@
     <option>Other</option>
   </select>
 
-  <label for="service">Service Type:</label>
+  <label>Service Type:</label>
   <select name="service" id="serviceType" onchange="toggleServiceFields()" required>
     <option value="">-- Select --</option>
     <option value="Medical">Medical Order</option>
@@ -145,7 +148,7 @@
   <input type="hidden" name="_next" value="https://gogulaanji.github.io/gogula-anji-worlds/thank-you.html" />
   <input type="hidden" name="_captcha" value="false" />
 
-  <button type="submit">Submit Order</button>
+  <button type="submit">📤 Submit</button>
 </form>
 
   </div>  <script>
